# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  build.bat  build.sh  conanfile.py  conanfile.txt  pre-commit  run.sh
.devcontainer/: devcontainer.json
cmake/: toolchain.cmake
src/: CMakeLists.txt  email_validator.cpp  email_validator.h  main.cpp
tests/: CMakeLists.txt  email_validator_test.cpp
